coloquei a imagem no showcase e o btn para cadastrar um pet

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,8 +2,14 @@
     <nav>
         <ul>
             <li>
-                <h1>PetShop</h1>
+                <h1>PetZ</h1>
             </li>
         </ul>
     </nav>
+
+    <div class="header-content">
+        <h4>Bem-Vindes</h4>
+        <img src="img/showcase.jpg" alt="Imagem de um Pug Sorrindo" class="showcase">
+        <button class="btn btn-cad">Cadastrar um Pet</button>
+    </div>
 </header>
