--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,14 +2,15 @@
     <nav>
         <ul>
             <li>
-                <h1>PetZ</h1>
+                <h3>PetZ</h3>
             </li>
         </ul>
     </nav>
 
     <div class="header-content">
         <h4>Bem-Vindes</h4>
-        <img src="img/showcase.jpg" alt="Imagem de um Pug Sorrindo" class="showcase">
+        <h1>PetZ</h1>
+        {{!-- <img src="img/showcase.jpg" alt="Imagem de um Pug Sorrindo" class="showcase"> --}}
         <button class="btn btn-cad">Cadastrar um Pet</button>
     </div>
 </header>
