--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
 
     <div class="header-content">
         <h4>Bem-Vindes</h4>
-        <h1>PetZ</h1>
+        <h1 class="logo">PetZ</h1>
         {{!-- <img src="img/showcase.jpg" alt="Imagem de um Pug Sorrindo" class="showcase"> --}}
         <button class="btn btn-cad">Cadastrar um Pet</button>
     </div>
