--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,6 +11,6 @@
         <h4>Bem-Vindes</h4>
         <h1 class="logo">PetZ</h1>
         {{!-- <img src="img/showcase.jpg" alt="Imagem de um Pug Sorrindo" class="showcase"> --}}
-        <button class="btn btn-cad">Cadastrar um Pet</button>
+        <button class="btn btn-cad">Cadastre um Pet</button>
     </div>
 </header>
