criei a estrutura html do section de animais

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,3 +14,41 @@
         <button class="btn btn-cad">Cadastre um Pet</button>
     </div>
 </header>
+
+<section class="animais">
+<div class="text-xl">Animais para Adoção</div>
+<div class="subtext">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum aperiam, accusamus repellendus officiis asperiores illo eligendi minus. Veritatis molestias laudantium aliquid enim eum odit nihil? Velit ex nesciunt unde iusto!
+</div>
+
+<div class="cards">
+    <div class="card-1">
+        <div class="cover-grad"></div>
+        <div class="card-text">
+            <div class="sub-tittle">Idade</div>
+            <h3>Nome</h3>
+        </div>
+    </div>
+    <div class="card-2">
+        <div class="cover-grad"></div>
+        <div class="card-text">
+            <div class="sub-tittle">Idade</div>
+            <h3>Nome</h3>
+        </div>
+    </div>
+    <div class="card-3">
+        <div class="cover-grad"></div>
+        <div class="card-text">
+            <div class="sub-tittle">Idade</div>
+            <h3>Nome</h3>
+        </div>
+    </div>
+    <div class="card-4">
+        <div class="cover-grad"></div>
+        <div class="card-text">
+            <div class="sub-tittle">Idade</div>
+            <h3>Nome</h3>
+        </div>
+    </div>
+</div>
+</section>
