cards com foto no background url

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
 
 <section class="animais">
 <div class="text-xl">Animais para Adoção</div>
-<div class="subtext">
+<div class="sub-text">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum aperiam, accusamus repellendus officiis asperiores illo eligendi minus. Veritatis molestias laudantium aliquid enim eum odit nihil? Velit ex nesciunt unde iusto!
 </div>
 
@@ -25,29 +25,16 @@
     <div class="card-1">
         <div class="cover-grad"></div>
         <div class="card-text">
-            <div class="sub-tittle">Idade</div>
-            <h3>Nome</h3>
+            <div class="sub-tittle">Categoria</div>
+            <h3>Cachorros</h3>
         </div>
+        
     </div>
     <div class="card-2">
         <div class="cover-grad"></div>
         <div class="card-text">
-            <div class="sub-tittle">Idade</div>
-            <h3>Nome</h3>
-        </div>
-    </div>
-    <div class="card-3">
-        <div class="cover-grad"></div>
-        <div class="card-text">
-            <div class="sub-tittle">Idade</div>
-            <h3>Nome</h3>
-        </div>
-    </div>
-    <div class="card-4">
-        <div class="cover-grad"></div>
-        <div class="card-text">
-            <div class="sub-tittle">Idade</div>
-            <h3>Nome</h3>
+            <div class="sub-tittle">Categoria</div>
+            <h3>Gatos</h3>
         </div>
     </div>
 </div>
