--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,17 @@ img {
     opacity: 0.8;
 }
 
+.text-xl {
+    font-size: 70px;
+    font-weight: bold;
+}
+
+.sub-text {
+    max-width: 850px;
+    margin-bottom: 10px;
+    font-size: 24px;
+}
+
 .header {
     height: 500px;
     background: linear-gradient(rgba(71, 71, 71, 0.8), rgba(77, 74, 74, 0.8)), url('../img/showcase.jpg') no-repeat center center / cover;
@@ -88,4 +99,42 @@ img {
     font-family: 'Satisfy', cursive;
     font-size: 15px;
     text-transform: uppercase;
+}
+
+
+/*animais*/
+
+.animais {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    pad: 90px 40px;
+}
+
+.animais .cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin-top: 40px;
+}
+
+.animais .cards>div {
+    height: 500px;
+    width: 300px;
+    position: relative;
+}
+
+.animais .cover-grad {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(156.82deg, rgba(0, 0, 0, 0.6) 4.58%, rgba(0, 0, 0, 0) 69.61%), linear-gradient(24.5deg, rgba(0, 0, 0, 0.2) 4.71%, rgba(0, 0, 0, 0) 71.49%);
+}
+
+.card-1 {
+    background: url('../img/card-1.jpg') no-repeat center center / cover;
 }
