estilo do formulario criado

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,26 +16,65 @@
 </header>
 
 <section class="animais">
-<div class="text-xl">Animais para Adoção</div>
-<div class="sub-text">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum aperiam, accusamus repellendus officiis asperiores illo eligendi minus. Veritatis molestias laudantium aliquid enim eum odit nihil? Velit ex nesciunt unde iusto!
-</div>
+    <div class="text-xl">Animais para Adoção</div>
+    <div class="sub-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum aperiam, accusamus repellendus officiis
+        asperiores illo eligendi minus. Veritatis molestias laudantium aliquid enim eum odit nihil? Velit ex nesciunt
+        unde iusto!
+    </div>
 
-<div class="cards">
-    <div class="card-1">
-        <div class="cover-grad"></div>
-        <div class="card-text">
-            <div class="sub-tittle">Categoria</div>
-            <h3>Cachorros</h3>
+    <div class="cards">
+        <div class="card">
+            <img src="/img/card-1.jpg" alt="">
+            <div class="cover-grad"></div>
+            <div class="card-text">
+                <div class="sub-tittle">Idade</div>
+                <h3>Nome</h3>
+            </div>
         </div>
-        
-    </div>
-    <div class="card-2">
-        <div class="cover-grad"></div>
-        <div class="card-text">
-            <div class="sub-tittle">Categoria</div>
-            <h3>Gatos</h3>
+
+        <div class="card">
+            <img src="/img/pexels-riika.jpg" alt="">
+            <div class="cover-grad"></div>
+            <div class="card-text">
+                <div class="sub-tittle">Idade</div>
+                <h3>Nome</h3>
+            </div>
         </div>
+
+
+        <div class="card">
+            <img src="/img/pexels-fox.jpg" alt="">
+            <div class="cover-grad"></div>
+            <div class="card-text">
+                <div class="sub-tittle">Idade</div>
+                <h3>Nome</h3>
+            </div>
+        </div>
+
     </div>
-</div>
+</section>
+
+
+<section class="cadastro">
+
+    <form action="" enctype="multipart/form-data">
+        <input type="text">
+        <div class="sel">
+            <select name="" id="">
+                <option value="">Anos</option>
+                <option value="">Meses</option>
+            </select>
+            <input type="number" min="0">
+        </div>
+
+        <div class="file">
+            <label for="fileUp">Escolha uma Foto</label>
+            <input type="file" name="" id="fileUp">
+            <span id="path"></span>
+        </div>
+
+        <button class="btn" type="submit">Enviar</button>
+    </form>
+
 </section>
