--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,13 +183,21 @@ h3.header-logo {
     margin: 0 auto;
 }
 
+.cadastro h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Rubik', sans-serif;
+    color: #0f110c;
+    margin-top: 50px;
+}
+
 .cadastro form {
-    padding: 20px 40px;
+    padding: 20px 30px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 20px;
     gap: 15px;
 }
 
@@ -202,10 +210,12 @@ h3.header-logo {
 
 input[type=text],
 input[type=number],
+input[type=tel],
 select,
 textarea {
     width: 100%;
     padding: 12px;
+    height: 40px;
     border: 1px solid rgb(131, 131, 131);
     border-radius: 4px;
     box-sizing: border-box;
@@ -229,9 +239,68 @@ input[type=file] {
 
 .file label {
     width: 100%;
-    height: 100%;
+    height: 40px;
     cursor: pointer;
     background: #2ea190;
     color: #fff;
     padding: 5px 5px;
+}
+
+
+/*quote*/
+
+.quote {
+    width: 100%;
+    margin-top: 55px;
+    margin-bottom: 55px;
+    padding: 20px 20px;
+    text-align: center;
+}
+
+.quote .quote-text {
+    font-size: 20px;
+    margin-bottom: 10px;
+    padding: 20px 20px;
+}
+
+.quote .quote-text cite {
+    font-size: 16px;
+}
+
+.quote .divider {
+    border-top: 3px #ccc solid;
+    max-width: 85%;
+    margin: auto;
+}
+
+
+/*footer*/
+
+.footer {
+    margin-top: 50px;
+    background: #2e2e2e;
+    color: #fff;
+}
+
+.footer-container {
+    max-width: 100%;
+    margin: auto;
+    padding: 20px;
+}
+
+.footer a {
+    color: #fff;
+}
+
+.utils {
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.utils a {
+    padding-right: 25px;
+}
+
+.footer .small {
+    text-align: center;
 }
