--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -54,8 +54,8 @@
             <input type="number" placeholder="Idade" name="idade" min="0" required>
             <select name="med" id="" required>
                 <option>Anos ou Meses?</option>
-                <option value="A">Anos</option>
-                <option value="M">Meses</option>
+                <option value="Ano(s)">Anos</option>
+                <option value="Mes(es)">Meses</option>
             </select>
         </div>
 
@@ -65,7 +65,7 @@
         </div>
 
         <div class="file">
-            <label for="fileUp">Escolha uma Foto do Animal</label>
+            <label for="fileUp">Foto do Animal</label>
             <input type="file" name="image" id="fileUp" required>
             <span id="path"></span>
         </div>
